--- a/MVCFizzBuzz.csproj
+++ b/MVCFizzBuzz.csproj
@@ -227,6 +227,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ServicesFizzBuzz\ServicesFizzBuzz.csproj">
+      <Project>{86d963c1-056c-4f4d-be51-cbe52bc457a2}</Project>
+      <Name>ServicesFizzBuzz</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
